--- a/style.css
+++ b/style.css
@@ -5,15 +5,18 @@ body {
     padding: 0;
     display: grid;
     grid-template-rows: 1fr 4fr 1fr;
+    grid-template-columns: 2fr 1fr;
     height: 100vh;
     width: 100vw;
 }
 
 .header {
     display: grid;
-    background-color: rgb(42, 119, 87);
+    background-color: rgb(172, 172, 172);
     grid-row: 1 / 2;
     grid-template-columns: 1fr 1fr;
+    box-shadow: 0px 12px 2px 1px rgba(221, 221, 221, 0.747);
+    grid-column: 1 / 3;
 }
 
 .logo {
@@ -48,13 +51,49 @@ body {
 .main-content {
     display: grid;
     grid-row: 2 / 3;
-    background-color: rgb(53, 145, 207);
+    grid-column: 1 / 3;
 }
 
 .footer {
     display: grid;
-    background-color: rgb(42, 119, 87);
+    background-color: rgb(219, 219, 219);
     grid-row: 3 / 3;
     justify-content: center;
     align-items: center;
+    grid-column: 1 / 3;
+}
+
+.form-popup {
+    display: none;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+    background-color: rgb(219, 219, 219);
+}
+
+.container-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.form-button {
+    width: 100px;
+    height: 50px;
+    background-color: rgb(209, 209, 209);
+    border: 5px solid rgb(97, 97, 97);
+    border-radius: 25px;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.inputs {
+    width: 200px;
+    height: 50px;
 }
