--- a/style.css
+++ b/style.css
@@ -65,17 +65,33 @@ body {
 
 .form-popup {
     display: none;
-    border: 3px solid #f1f1f1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent overlay background */
     z-index: 9;
-    grid-column: 2 / 3;
-    grid-row: 1 / 4;
-    background-color: rgb(219, 219, 219);
-}
+  }
 
 .container-form {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    background-color: rgb(219, 219, 219);
+    padding: 20px;
+    border: 3px solid #f1f1f1;
+    text-align: center;
+      
+}
+
+.radio-buttons {
+    margin: 10px;
+    text-align: left;
+    margin-left: 20px;
 }
 
 .form-button {
@@ -96,6 +112,8 @@ body {
 .inputs {
     width: 200px;
     height: 50px;
+    margin: 20px;
+    border-radius: 10px;
 }
 
 .book-card {
@@ -103,10 +121,23 @@ body {
     flex-direction: column;
     justify-content: space-between;
     background-color: blue;
-
 }
 
 .book-area {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+    margin: 20px;
+}
+
+.book-card-btns {
+    width: 80%;
+    height: 50px;
+    margin: 20px;
+}
+
+.book-card-btns-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
