--- a/style.css
+++ b/style.css
@@ -150,3 +150,11 @@ body {
     font-size: 20px;
     font-weight: bold;
 }
+
+.green-button {
+    background-color: rgb(82, 204, 82);
+}
+
+.red-button {
+    background-color: rgb(211, 41, 41);
+}
